# glyph-bbox-rs

./: .gitlab-ci.yml  Cargo.toml  Makefile
assets/web/: index.html  main.js
src/: lib.rs
src/dataset/: mod.rs
src/web/: mod.rs
