[package]
name = "minutiae"
version = "0.1.0"
authors = ["Mihir Singh <git.service@mihirsingh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
clap = "2.33.0"
warp = "0.2.2"